# Deviant-AI

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  setup.py
configs/: experiment.yaml  gemma_expanded_pilot.yaml  mistral7b_v03_expanded_pilot.yaml  models.yaml  pilot_qwen.yaml  qwen_expanded_pilot.yaml
data/: sanitized_examples.jsonl
docs/: cross_model_behavioral_comparison.md  ethics.md  experiment_log.md  gemma_expanded_pilot.md  gemma_fixed_continuation_findings.md  gemma_token_probability_findings.md  mistral_expanded_pilot.md  protocol.md  qwen_expanded_pilot.md  qwen_fixed_continuation_findings.md  qwen_fixed_continuation_protocol.md  qwen_token_probability_findings.md  qwen_token_probability_latex_draft.tex  repository_audit.md  scoring_rubric.md
notebooks/: 00_pilot_kaggle_colab.ipynb
prompts/: prompt_variants_schema.json
src/: __init__.py  analyze_fixed_continuations.py  analyze_results.py  analyze_token_probabilities.py  analyze_token_probability_sensitivity.py  create_annotation_sheet.py  generate_prompt_variants.py  judge_outputs.py  plot_expanded_results.py  plot_gemma_results.py  plot_results.py  plot_token_probabilities.py  prepare_dataset.py  run_api_model.py  run_local_model.py  score_fixed_continuations.py  score_response_logprobs.py  validate_prompt_variants.py
tables/: cross_model_behavioral_effects.csv  cross_model_behavioral_metrics.csv  gemma_expanded_metrics.csv  gemma_fixed_continuation_paired.csv  gemma_fixed_continuation_summary.csv  gemma_token_probability_correlations.csv  gemma_token_probability_paired.csv  (+17 more)
(+14 files in other folders)
