[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "deviant-ai"
version = "0.1.0"
description = "Controlled jailbreak robustness evaluation pipeline"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
